--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -1413,7 +1413,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "HdQ3FZ4dThWY"
       },
@@ -1428,7 +1428,7 @@
         "    # Optional: \n",
         "    # train and test a classifier model on the pre-processed data\n",
         "    X, y = df.drop('Survived', axis=1).values, df['Survived'].values\n",
-        "    X_train, y_train, X_test, y_test = train_test_split(X, y, train_size=0.2)\n",
+        "    #X_train, y_train, X_test, y_test = train_test_split(X, y, train_size=0.2)\n",
         "    \n",
         "    # return accuracy\n",
         "    pass"
