--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -1449,7 +1449,7 @@
       "source": [
         "\n",
         "# accuracy = train_test(df_processed)\n",
-        "print(f\"Model Accuracy: {100 * accuracy:.2f}%\")\n",
+        "#print(f\"Model Accuracy: {100 * accuracy:.2f}%\")\n",
         "\n"
       ]
     }
