--- a/challenge-2.ipynb
+++ b/challenge-2.ipynb
@@ -916,7 +916,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -924,9 +924,8 @@
           "output_type": "stream",
           "text": [
             "After preprocess_final():\n",
-            "Columns: Index(['PassengerId', 'Survived', 'Pclass', 'Name', 'Sex', 'Age', 'SibSp',\n",
-            "       'Parch', 'Ticket', 'Fare', 'Cabin', 'Embarked_C', 'Embarked_Q',\n",
-            "       'Embarked_S', 'FamilySize'],\n",
+            "Columns: Index(['Survived', 'Pclass', 'Sex', 'Age', 'SibSp', 'Parch', 'Fare',\n",
+            "       'Embarked_C', 'Embarked_Q', 'Embarked_S', 'FamilySize'],\n",
             "      dtype='object')\n",
             "Missing Values: 0\n"
           ]
@@ -945,6 +944,8 @@
         "    \"\"\"\n",
         "    df_processed = df.copy()\n",
         "    \n",
+        "    df_processed = df_processed.drop(columns=['Cabin', 'Ticket', 'Name', 'PassengerId'])\n",
+        "\n",
         "    # TODO: handle missing Age (fill with median?), handle missing Embarked, etc.\n",
         "    median_age = df_processed['Age'].median()\n",
         "    df_processed['Age'] =df_processed['Age'].fillna(median_age) \n",
